# loslibc

./: CMakeLists.txt  LICENSE  README.md
cmake/: loslibc-config.cmake.in
cmake/toolchains/: x86_64-elf-gcc.cmake
include/: string.h
src/string/: memcpy.c  memmove.c  memset.c
